--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "axios": "^1.3.4",
+    "axios-auth-refresh": "^3.3.6",
     "framer-motion": "^10.0.1",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
     "react-leaflet": "^4.2.0",
     "react-leaflet-draw": "^0.20.4",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "swr": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
