--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/poppins": "^4.5.10",
     "axios": "^1.3.4",
     "axios-auth-refresh": "^3.3.6",
     "framer-motion": "^10.0.1",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
