--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.2",
     "react-leaflet": "^4.2.0",
     "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.8.1",
-    "swr": "^2.0.4"
+    "react-swr-infinite-scroll": "^1.0.1",
+    "sanitize-html": "^2.10.0",
+    "swr": "^2.0.0-beta.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
