--- a/package.json
+++ b/package.json
@@ -10,26 +10,43 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/poppins": "^4.5.10",
+    "@tanstack/react-table": "^8.7.9",
     "axios": "^1.3.4",
     "axios-auth-refresh": "^3.3.6",
+    "date-fns": "^2.29.3",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-transform": "^3.8.7",
     "framer-motion": "^10.0.1",
+    "isomorphic-dompurify": "^1.0.0",
     "leaflet": "^1.9.3",
     "leaflet-draw": "^1.0.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.43.2",
+    "react-hook-form": "7.34.2",
     "react-leaflet": "^4.2.0",
     "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.8.1",
+    "react-share": "^4.4.1",
     "react-swr-infinite-scroll": "^1.0.1",
+    "react-text-mask": "^5.5.0",
     "sanitize-html": "^2.10.0",
-    "swr": "^2.0.0-beta.7"
+    "swr": "^2.0.0-beta.7",
+    "text-mask-addons": "^3.8.0",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
